--- a/code/notebooks/af.ipynb
+++ b/code/notebooks/af.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 47,
    "id": "977418ae-b492-4dae-8826-c8522f2652dc",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 48,
    "id": "dc8b9cd3-10d2-4b50-991c-66e68cdb6217",
    "metadata": {},
    "outputs": [],
@@ -80,26 +80,28 @@
     "experiments_46, df_46 = load_experiments('../results/experim_46.json')\n",
     "experiments_47, df_47 = load_experiments('../results/experim_47.json')\n",
     "experiments_48, df_48 = load_experiments('../results/experim_48.json')\n",
-    "# experiments_49, df_49 = load_experiments('../results/experim_49.json')\n",
-    "# experiments_50, df_50 = load_experiments('../results/experim_50.json')\n",
-    "# experiments_51, df_51 = load_experiments('../results/experim_51.json')\n",
+    "experiments_49, df_49 = load_experiments('../results/experim_49.json')\n",
+    "experiments_50, df_50 = load_experiments('../results/experim_50.json')\n",
+    "experiments_51, df_51 = load_experiments('../results/experim_51.json')\n",
     "# experiments_52, df_52 = load_experiments('../results/experim_52.json')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 61,
    "id": "3080e8d1-e8d5-44d1-8e6f-cd9e36108572",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# experiments = experiments_17 + experiments_18 + experiments_19 + experiments_29 + \\\n",
-    "experiments = experiments_31 + experiments_33 + experiments_32 + experiments_37 "
+    "experiments = experiments_17 + experiments_18 + experiments_19 + experiments_29 \\\n",
+    "+ experiments_31 + experiments_33 + experiments_37 \\\n",
+    "+ experiments_32 + experiments_49 + experiments_51 \\\n",
+    "+ experiments_38 + experiments_48 + experiments_50"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 62,
    "id": "0b62e7ae-c41c-4edb-bbd8-2aff278b842d",
    "metadata": {},
    "outputs": [],
@@ -109,454 +111,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 69,
    "id": "4761f71a-0d06-4242-839d-39afe9a9cc7e",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>alpha_function</th>\n",
-       "      <th>mixing_type</th>\n",
-       "      <th>mean</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>1 / (x + 1)^0.5</td>\n",
-       "      <td>decaying past</td>\n",
-       "      <td>136054.92</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>1 / (x + 1)^1.5</td>\n",
-       "      <td>decaying past</td>\n",
-       "      <td>134772.88</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>1 / (x + 1)^2</td>\n",
-       "      <td>decaying past</td>\n",
-       "      <td>135387.37</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>1 / ln(x + 1)</td>\n",
-       "      <td>decaying past</td>\n",
-       "      <td>283210.46</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>1 / e^(x/3)</td>\n",
-       "      <td>decaying past</td>\n",
-       "      <td>135409.03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>1 / (x + 10)</td>\n",
-       "      <td>uniform past</td>\n",
-       "      <td>110521.38</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>1 / (x + 100)</td>\n",
-       "      <td>uniform past</td>\n",
-       "      <td>110604.17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>1 / (x + 1000)</td>\n",
-       "      <td>uniform past</td>\n",
-       "      <td>113447.62</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>1 / 100</td>\n",
-       "      <td>uniform past</td>\n",
-       "      <td>126579.65</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>1 / 500</td>\n",
-       "      <td>uniform past</td>\n",
-       "      <td>110553.23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45</th>\n",
-       "      <td>1 / 1000</td>\n",
-       "      <td>uniform past</td>\n",
-       "      <td>109804.61</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>46</th>\n",
-       "      <td>1 / 5000</td>\n",
-       "      <td>uniform past</td>\n",
-       "      <td>119177.49</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49</th>\n",
-       "      <td>1 / 10000</td>\n",
-       "      <td>uniform past</td>\n",
-       "      <td>124693.53</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>54</th>\n",
-       "      <td>1 / 50000</td>\n",
-       "      <td>uniform past</td>\n",
-       "      <td>132477.77</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1 / (x + 1)^0.5</td>\n",
-       "      <td>uniform past</td>\n",
-       "      <td>175610.93</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>1 / (x + 1)^1.5</td>\n",
-       "      <td>uniform past</td>\n",
-       "      <td>132418.35</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1 / (x + 1)^2</td>\n",
-       "      <td>uniform past</td>\n",
-       "      <td>135301.37</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>1 / ln(x + 1)</td>\n",
-       "      <td>uniform past</td>\n",
-       "      <td>390906.14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>1 / e^(x/3)</td>\n",
-       "      <td>uniform past</td>\n",
-       "      <td>135409.04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>1 / (x + 1)^0.5</td>\n",
-       "      <td>decaying past</td>\n",
-       "      <td>131508.93</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>1 / (x + 1)^1.5</td>\n",
-       "      <td>decaying past</td>\n",
-       "      <td>132550.84</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>1 / (x + 1)^2</td>\n",
-       "      <td>decaying past</td>\n",
-       "      <td>132753.35</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>1 / ln(x + 1)</td>\n",
-       "      <td>decaying past</td>\n",
-       "      <td>236401.91</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>1 / e^(x/3)</td>\n",
-       "      <td>decaying past</td>\n",
-       "      <td>132760.88</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>1 / (x + 10)</td>\n",
-       "      <td>uniform past</td>\n",
-       "      <td>119758.30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>1 / (x + 100)</td>\n",
-       "      <td>uniform past</td>\n",
-       "      <td>120269.13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>1 / (x + 1000)</td>\n",
-       "      <td>uniform past</td>\n",
-       "      <td>123629.94</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>1 / 100</td>\n",
-       "      <td>uniform past</td>\n",
-       "      <td>122193.55</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>1 / 500</td>\n",
-       "      <td>uniform past</td>\n",
-       "      <td>114376.80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>51</th>\n",
-       "      <td>1 / 1000</td>\n",
-       "      <td>uniform past</td>\n",
-       "      <td>117809.05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>52</th>\n",
-       "      <td>1 / 5000</td>\n",
-       "      <td>uniform past</td>\n",
-       "      <td>127377.46</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>53</th>\n",
-       "      <td>1 / 10000</td>\n",
-       "      <td>uniform past</td>\n",
-       "      <td>129766.19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>56</th>\n",
-       "      <td>1 / 50000</td>\n",
-       "      <td>uniform past</td>\n",
-       "      <td>132100.09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1 / (x + 1)^0.5</td>\n",
-       "      <td>uniform past</td>\n",
-       "      <td>146286.04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>1 / (x + 1)^1.5</td>\n",
-       "      <td>uniform past</td>\n",
-       "      <td>131940.35</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>1 / (x + 1)^2</td>\n",
-       "      <td>uniform past</td>\n",
-       "      <td>132731.09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>1 / ln(x + 1)</td>\n",
-       "      <td>uniform past</td>\n",
-       "      <td>309569.53</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>1 / e^(x/3)</td>\n",
-       "      <td>uniform past</td>\n",
-       "      <td>132760.88</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>1 / (x + 1)^0.5</td>\n",
-       "      <td>decaying past</td>\n",
-       "      <td>132880.13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38</th>\n",
-       "      <td>1 / (x + 1)^1.5</td>\n",
-       "      <td>decaying past</td>\n",
-       "      <td>133653.10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>1 / (x + 1)^2</td>\n",
-       "      <td>decaying past</td>\n",
-       "      <td>133999.80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>1 / ln(x + 1)</td>\n",
-       "      <td>decaying past</td>\n",
-       "      <td>252792.84</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>1 / e^(x/3)</td>\n",
-       "      <td>decaying past</td>\n",
-       "      <td>134012.15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>1 / (x + 10)</td>\n",
-       "      <td>uniform past</td>\n",
-       "      <td>114212.49</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>1 / (x + 100)</td>\n",
-       "      <td>uniform past</td>\n",
-       "      <td>114760.01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>1 / (x + 1000)</td>\n",
-       "      <td>uniform past</td>\n",
-       "      <td>118679.47</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>1 / 100</td>\n",
-       "      <td>uniform past</td>\n",
-       "      <td>125443.80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>1 / 500</td>\n",
-       "      <td>uniform past</td>\n",
-       "      <td>111701.01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48</th>\n",
-       "      <td>1 / 1000</td>\n",
-       "      <td>uniform past</td>\n",
-       "      <td>113087.31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>47</th>\n",
-       "      <td>1 / 5000</td>\n",
-       "      <td>uniform past</td>\n",
-       "      <td>123913.36</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50</th>\n",
-       "      <td>1 / 10000</td>\n",
-       "      <td>uniform past</td>\n",
-       "      <td>127919.40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>55</th>\n",
-       "      <td>1 / 50000</td>\n",
-       "      <td>uniform past</td>\n",
-       "      <td>132530.84</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1 / (x + 1)^0.5</td>\n",
-       "      <td>uniform past</td>\n",
-       "      <td>157817.94</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>1 / (x + 1)^1.5</td>\n",
-       "      <td>uniform past</td>\n",
-       "      <td>132462.74</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1 / (x + 1)^2</td>\n",
-       "      <td>uniform past</td>\n",
-       "      <td>133958.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>1 / ln(x + 1)</td>\n",
-       "      <td>uniform past</td>\n",
-       "      <td>333528.48</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>1 / e^(x/3)</td>\n",
-       "      <td>uniform past</td>\n",
-       "      <td>134012.15</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "     alpha_function    mixing_type       mean\n",
-       "37  1 / (x + 1)^0.5  decaying past  136054.92\n",
-       "30  1 / (x + 1)^1.5  decaying past  134772.88\n",
-       "39    1 / (x + 1)^2  decaying past  135387.37\n",
-       "40    1 / ln(x + 1)  decaying past  283210.46\n",
-       "41      1 / e^(x/3)  decaying past  135409.03\n",
-       "5      1 / (x + 10)   uniform past  110521.38\n",
-       "8     1 / (x + 100)   uniform past  110604.17\n",
-       "14   1 / (x + 1000)   uniform past  113447.62\n",
-       "23          1 / 100   uniform past  126579.65\n",
-       "22          1 / 500   uniform past  110553.23\n",
-       "45         1 / 1000   uniform past  109804.61\n",
-       "46         1 / 5000   uniform past  119177.49\n",
-       "49        1 / 10000   uniform past  124693.53\n",
-       "54        1 / 50000   uniform past  132477.77\n",
-       "1   1 / (x + 1)^0.5   uniform past  175610.93\n",
-       "12  1 / (x + 1)^1.5   uniform past  132418.35\n",
-       "3     1 / (x + 1)^2   uniform past  135301.37\n",
-       "29    1 / ln(x + 1)   uniform past  390906.14\n",
-       "27      1 / e^(x/3)   uniform past  135409.04\n",
-       "31  1 / (x + 1)^0.5  decaying past  131508.93\n",
-       "36  1 / (x + 1)^1.5  decaying past  132550.84\n",
-       "42    1 / (x + 1)^2  decaying past  132753.35\n",
-       "43    1 / ln(x + 1)  decaying past  236401.91\n",
-       "44      1 / e^(x/3)  decaying past  132760.88\n",
-       "6      1 / (x + 10)   uniform past  119758.30\n",
-       "9     1 / (x + 100)   uniform past  120269.13\n",
-       "15   1 / (x + 1000)   uniform past  123629.94\n",
-       "18          1 / 100   uniform past  122193.55\n",
-       "26          1 / 500   uniform past  114376.80\n",
-       "51         1 / 1000   uniform past  117809.05\n",
-       "52         1 / 5000   uniform past  127377.46\n",
-       "53        1 / 10000   uniform past  129766.19\n",
-       "56        1 / 50000   uniform past  132100.09\n",
-       "0   1 / (x + 1)^0.5   uniform past  146286.04\n",
-       "11  1 / (x + 1)^1.5   uniform past  131940.35\n",
-       "17    1 / (x + 1)^2   uniform past  132731.09\n",
-       "24    1 / ln(x + 1)   uniform past  309569.53\n",
-       "20      1 / e^(x/3)   uniform past  132760.88\n",
-       "35  1 / (x + 1)^0.5  decaying past  132880.13\n",
-       "38  1 / (x + 1)^1.5  decaying past  133653.10\n",
-       "32    1 / (x + 1)^2  decaying past  133999.80\n",
-       "33    1 / ln(x + 1)  decaying past  252792.84\n",
-       "34      1 / e^(x/3)  decaying past  134012.15\n",
-       "7      1 / (x + 10)   uniform past  114212.49\n",
-       "10    1 / (x + 100)   uniform past  114760.01\n",
-       "16   1 / (x + 1000)   uniform past  118679.47\n",
-       "19          1 / 100   uniform past  125443.80\n",
-       "28          1 / 500   uniform past  111701.01\n",
-       "48         1 / 1000   uniform past  113087.31\n",
-       "47         1 / 5000   uniform past  123913.36\n",
-       "50        1 / 10000   uniform past  127919.40\n",
-       "55        1 / 50000   uniform past  132530.84\n",
-       "2   1 / (x + 1)^0.5   uniform past  157817.94\n",
-       "13  1 / (x + 1)^1.5   uniform past  132462.74\n",
-       "4     1 / (x + 1)^2   uniform past  133958.00\n",
-       "25    1 / ln(x + 1)   uniform past  333528.48\n",
-       "21      1 / e^(x/3)   uniform past  134012.15"
+       "(168, 4)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "table = df[df[\"train_window\"] == 10]\n",
+    "pd.set_option('display.max_rows', None)\n",
+    "mt_mask = 1 #(df[\"mixing_type\"] == \"start\") | (df[\"mixing_type\"] == \"uniform past\")\n",
+    "table = df[(df[\"train_window\"] == 10) & mt_mask]\n",
     "# print(table[[\"weight_function\", \"mixing_type\", \"mean\"]].to_latex(float_format=\"%.2f\", index=False))\n",
-    "table[[\"alpha_function\", \"mixing_type\", \"mean\"]]\n",
-    "# print(table[[\"alpha_function\", \"mixing_type\", \"weight_function\", \"mean\"]].to_latex(formatters= {\"mean\": lambda x: round(x / 10000, 2)}, index=False))"
+    "short = table[[\"alpha_function\", \"mixing_type\", \"weight_function\", \"mean\"]]\n",
+    "# short\n",
+    "# print(short.to_latex(formatters= {\"mean\": lambda x: round(x / 10000, 2)}, index=False))\n",
+    "# print(short.to_latex(float_format=\"%.2f\", index=False))\n",
+    "# short.shape"
    ]
   },
   {
