--- a/paper/KuninBogoiavlenskii2024ExpertsAggregating.tex
+++ b/paper/KuninBogoiavlenskii2024ExpertsAggregating.tex
@@ -10,16 +10,15 @@
 %\usepackage{slashbox}
 \usepackage{diagbox}
 
-\usepackage{rotating}
+%\usepackage[figuresright]{rotating}
+\usepackage[figuresleft]{rotating}
 \usepackage{tabularx}
 \usepackage{ragged2e}
 \usepackage{lipsum}% for dummy text
 %\usepackage[showframe]{geometry}
 
 \graphicspath{{../figures/}{../code/notebooks/pic}}
-
 \raggedbottom
-
 \usepackage{float}
 
 
@@ -285,7 +284,7 @@ We investigate the impact of various hyperparameters on the GMPP algorithm's per
 \end{itemize}
 
 
-%\contourlength{0.1pt}
+\contourlength{0.1pt}
 %\item \contour{black}{Mixing Update Scheme:}
 
 \item Mixing Update Coefficients ($\alpha_t$):
@@ -609,95 +608,93 @@ $1 / 50000$ & 125141.06 \\
 
 \end{table}
 
-%\begin{sidewaystable}
-%    \centering
-%\caption{Wide table}
-%    \label{tab:wide-item-tbl}
-%    
-%    
-%\centering
-%\caption{Mean values for different Mixing Update schemes and Weight and Alpha functions}
-%\label{tab:mean_values}
-%
-%\begin{tabular}{c|ccc|cccc}
-%%\toprule
-%%& \multicolumn{6}{c}{Mixing scheme} \\
-%\toprule
-%Mixing scheme & \multicolumn{3}{c|}{decaying past} & \multicolumn{3}{c}{increasing past} &\\
-%\midrule
-%\backslashbox{$\alpha_i$}{$w_1^i$}
-%&
-%\centering $\dfrac{1}{t^{1.01}}$ &
-%\centering $\dfrac{1}{t^{0.5}}$ &
-%\centering $\dfrac{1}{c}$ &
-%\centering $\dfrac{1}{t^{1.01}}$ &
-%\centering $\dfrac{1}{t^{0.5}}$ & 
-%\centering $\dfrac{1}{c}$ &\\
-%
-%\midrule
-%
-%$1 / (x + 1)^{0.5}$ & 136054.92 & 132880.13 & 131508.93 & 175610.93 & 157817.94 & 146286.04 \\
-%$1 / (x + 1)^{1.5}$ & 134772.88 & 133653.10 & 132550.84 & 132418.35 & 132462.74 & 131940.35 \\
-%$1 / (x + 1)^2$ & 135387.37 & 133999.80 & 132753.35 & 135301.37 & 133958.00 & 132731.09 \\
-%$1 / \ln(x + 1)$ & 283210.46 & 252792.84 & 236401.91 & 390906.14 & 333528.48 & 309569.53 \\
-%$1 / e^{x/3}$ & 135409.03 & 134012.15 & 132760.88 & 135409.04 & 134012.15 & 132760.88 \\
-%$1 / (x + 10)$ & - & 114212.49 & 119758.30 & - & 114212.49 & 119758.30 \\
-%$1 / (x + 100)$ & - & 114760.01 & 120269.13 & - & 114760.01 & 120269.13 \\
-%$1 / (x + 1000)$ & - & 118679.47 & 123629.94 & - & 118679.47 & 123629.94 \\
-%$1 / 100$ & - & 125443.80 & 122193.55 & - & 125443.80 & 122193.55 \\
-%$1 / 500$ & - & 111701.01 & 114376.80 & - & 111701.01 & 114376.80 \\
-%$1 / 1000$ & - & 113087.31 & 117809.05 & - & 113087.31 & 117809.05 \\
-%$1 / 5000$ & - & 123913.36 & 127377.46 & - & 123913.36 & 127377.46 \\
-%$1 / 10000$ & - & 127919.40 & 129766.19 & - & 127919.40 & 129766.19 \\
-%$1 / 50000$ & - & 132530.84 & 132100.09 & - & 132530.84 & 132100.09 \\
-%
-%\bottomrule
-%\end{tabular}
-%
-%\end{sidewaystable}
 
 
 
-\begin{table}[h]
-\centering
+
+\begin{sidewaystable}
+ \centering
 \caption{Mean values for different Mixing Update schemes and Weight and Alpha functions}
 \label{tab:mean_values}
 
-\begin{tabular}{c|ccc|cccc}
-%\toprule
-%& \multicolumn{6}{c}{Mixing scheme} \\
+\begin{tabular}{c|ccc|ccc|ccc|cccc}
 \toprule
-Mixing scheme & \multicolumn{3}{c|}{decaying past} & \multicolumn{3}{c}{increasing past} &\\
+Mixing scheme & \multicolumn{3}{c|}{decaying past} & \multicolumn{3}{c|}{increasing past} & \multicolumn{3}{c|}{start} & \multicolumn{3}{c}{uniform past} \\
 \midrule
-\backslashbox{$\alpha_i$}{$w_1^i$}
-&
-\centering $\dfrac{1}{t^{1.01}}$ &
-\centering $\dfrac{1}{t^{0.5}}$ &
-\centering $\dfrac{1}{c}$ &
-\centering $\dfrac{1}{t^{1.01}}$ &
-\centering $\dfrac{1}{t^{0.5}}$ & 
-\centering $\dfrac{1}{c}$ &\\
-
+\backslashbox{$\alpha_i$}{$w_1^i$} &
+$\dfrac{1}{t^{1.01}}$ &
+$\dfrac{1}{t^{0.5}}$ &
+$\dfrac{1}{c}$ &
+$\dfrac{1}{t^{1.01}}$ &
+$\dfrac{1}{t^{0.5}}$ & 
+$\dfrac{1}{c}$ &
+$\dfrac{1}{t^{1.01}}$ &
+$\dfrac{1}{t^{0.5}}$ &
+$\dfrac{1}{c}$ &
+$\dfrac{1}{t^{1.01}}$ &
+$\dfrac{1}{t^{0.5}}$ &
+$\dfrac{1}{c}$ \\
 \midrule
 
-$1 / (x + 1)^{0.5}$ & 136054.92 & 132880.13 & 131508.93 & 175610.93 & 157817.94 & 146286.04 \\
-$1 / (x + 1)^{1.5}$ & 134772.88 & 133653.10 & 132550.84 & 132418.35 & 132462.74 & 131940.35 \\
-$1 / (x + 1)^2$ & 135387.37 & 133999.80 & 132753.35 & 135301.37 & 133958.00 & 132731.09 \\
-$1 / \ln(x + 1)$ & 283210.46 & 252792.84 & 236401.91 & 390906.14 & 333528.48 & 309569.53 \\
-$1 / e^{x/3}$ & 135409.03 & 134012.15 & 132760.88 & 135409.04 & 134012.15 & 132760.88 \\
-$1 / (x + 10)$ & - & 114212.49 & 119758.30 & - & 114212.49 & 119758.30 \\
-$1 / (x + 100)$ & - & 114760.01 & 120269.13 & - & 114760.01 & 120269.13 \\
-$1 / (x + 1000)$ & - & 118679.47 & 123629.94 & - & 118679.47 & 123629.94 \\
-$1 / 100$ & - & 125443.80 & 122193.55 & - & 125443.80 & 122193.55 \\
-$1 / 500$ & - & 111701.01 & 114376.80 & - & 111701.01 & 114376.80 \\
-$1 / 1000$ & - & 113087.31 & 117809.05 & - & 113087.31 & 117809.05 \\
-$1 / 5000$ & - & 123913.36 & 127377.46 & - & 123913.36 & 127377.46 \\
-$1 / 10000$ & - & 127919.40 & 129766.19 & - & 127919.40 & 129766.19 \\
-$1 / 50000$ & - & 132530.84 & 132100.09 & - & 132530.84 & 132100.09 \\
-
+$1 / (x + 1)^{1.5}$ & 134772.88 & 133653.10 & 132550.84 & 131002.46 & 131849.84 & 131691.01 & 125699.71 & 130185.66 & 131329.66 & 132418.35 & 132462.74 & 131940.35 \\
+$1 / (x + 1)^2$ & 135387.37 & 133999.80 & 132753.35 & 135243.12 & 133935.92 & 132721.89 & 134929.54 & 133876.06 & 132709.43 & 135301.37 & 133958.00 & 132731.09 \\
+$1 / \ln(x + 1)$ & 283210.46 & 252792.84 & 236401.91 & 400131.46 & 337777.06 & 312108.84 & 418163.13 & 340332.19 & 309671.68 & 390906.14 & 333528.48 & 309569.53 \\
+$1 / e^{x/3}$ & 135409.03 & 134012.15 & 132760.88 & 135409.05 & 134012.15 & 132760.88 & 135409.06 & 134012.15 & 132760.88 & 135409.04 & 134012.15 & 132760.88 \\
+$1 / (x + 10)$ & 123137.39 & 126238.17 & 128145.72 & 110259.12 & 111266.42 & 117298.84 & 132208.09 & 108638.55 & 114051.47 & 110521.38 & 114212.49 & 119758.30 \\
+$1 / (x + 100)$ & 123716.13 & 126653.44 & 128428.77 & 109743.66 & 111718.80 & 117835.07 & 131623.56 & 108732.56 & 114568.90 & 110604.17 & 114760.01 & 120269.13 \\
+$1 / (x + 1000)$ & 127161.18 & 129057.11 & 129996.30 & 110754.21 & 115361.58 & 121521.83 & 127165.47 & 110389.16 & 118512.52 & 113447.62 & 118679.47 & 123629.94 \\
+$1 / 100$ & 116458.51 & 119146.90 & 121009.27 & 129873.90 & 125704.17 & 120981.15 & 163117.40 & 129035.87 & 117521.60 & 126579.65 & 125443.80 & 122193.55 \\
+$1 / 500$ & 115819.57 & 120327.13 & 124078.27 & 112133.96 & 110618.04 & 112210.02 & 141385.79 & 111706.58 & 108969.41 & 110553.23 & 111701.01 & 114376.80 \\
+$1 / 1000$ & 120757.50 & 124499.69 & 127207.59 & 109844.21 & 110794.06 & 115281.22 & 135612.25 & 109449.15 & 111709.95 & 109804.61 & 113087.31 & 117809.05 \\
+$1 / 5000$ & 130666.00 & 131268.42 & 131337.28 & 115333.89 & 121026.84 & 125928.09 & 121905.50 & 115147.43 & 123741.66 & 119177.49 & 123913.36 & 127377.46 \\
+$1 / 10000$ & 132825.98 & 132555.11 & 132022.41 & 121016.20 & 125808.32 & 128881.01 & 119357.81 & 120634.74 & 127510.93 & 124693.53 & 127919.40 & 129766.19 \\
+$1 / 50000$ & 134850.61 & 133704.96 & 132608.56 & 130965.08 & 131894.79 & 131885.46 & 125141.06 & 129963.25 & 131542.49 & 132477.77 & 132530.84 & 132100.09 \\
 \bottomrule
 \end{tabular}
-\end{table}
+\end{sidewaystable}
+
+
+
+
+\begin{sidewaystable}
+\centering
+\caption{Mean values for different Mixing Update schemes and Weight and Alpha functions}
+\label{tab:mean_values}
+\begin{tabular}{c|ccc|ccc|ccc|cccc}
+\toprule
+Mixing scheme & \multicolumn{3}{c|}{start} & \multicolumn{3}{c|}{increasing past} & \multicolumn{3}{c|}{uniform past} & \multicolumn{3}{c}{decaying past} \\
+\midrule
+\backslashbox{$\alpha_i$}{$w_1^i$} &
+$\dfrac{1}{t^{1.01}}$ &
+$\dfrac{1}{t^{0.5}}$ &
+$\dfrac{1}{c}$ &
+$\dfrac{1}{t^{1.01}}$ &
+$\dfrac{1}{t^{0.5}}$ &
+$\dfrac{1}{c}$ &
+$\dfrac{1}{t^{1.01}}$ &
+$\dfrac{1}{t^{0.5}}$ &
+$\dfrac{1}{c}$ &
+$\dfrac{1}{t^{1.01}}$ &
+$\dfrac{1}{t^{0.5}}$ &
+$\dfrac{1}{c}$ \\
+\midrule
+$1 / (x + 1)^{1.5}$ & 125699 & 130185 & 131329 & 131002 & 131849 & 131691 & 132418 & 132462 & 131940 & 134772 & 133653 & 132550 \\
+$1 / (x + 1)^2$ & 134929 & 133876 & 132709 & 135243 & 133935 & 132721 & 135301 & 133958 & 132731 & 135387 & 133999 & 132753 \\
+$1 / \ln(x + 1)$ & 418163 & 340332 & 309671 & 400131 & 337777 & 312108 & 390906 & 333528 & 309569 & 283210 & 252792 & 236401 \\
+$1 / e^{x/3}$ & 135409 & 134012 & 132760 & 135409 & 134012 & 132760 & 135409 & 134012 & 132760 & 135409 & 134012 & 132760 \\
+$1 / (x + 10)$ & 132208 & 108638 & 114051 & 110259 & 111266 & 117298 & 110521 & 114212 & 119758 & 123137 & 126238 & 128145 \\
+$1 / (x + 100)$ & 131623 & 108732 & 114568 & 109743 & 111718 & 117835 & 110604 & 114760 & 120269 & 123716 & 126653 & 128428 \\
+$1 / (x + 1000)$ & 127165 & 110389 & 118512 & 110754 & 115361 & 121521 & 113447 & 118679 & 123629 & 127161 & 129057 & 12999 \\
+$1 / 100$ & 163117 & 129035 & 117521 & 129873 & 125704 & 120981 & 126579 & 125443 & 122193 & 116458 & 119146 & 121009 \\
+$1 / 500$ & 141385 & 111706 & 108969 & 112133 & 110618 & 112210 & 110553 & 111701 & 114376 & 115819 & 120327 & 124078 \\
+$1 / 1000$ & 135612 & 109449 & 111709 & 109844 & 110794 & 115281 & 109804 & 113087 & 117809 & 120757 & 124499 & 127207 \\
+$1 / 5000$ & 121905 & 115147 & 123741 & 115333 & 121026 & 125928 & 119177 & 123913 & 127377 & 130666 & 131268 & 131337 \\
+$1 / 10000$ & 119357 & 120634 & 127510 & 121016 & 125808 & 128881 & 124693 & 127919 & 129766 & 132825 & 132555 & 132022 \\
+$1 / 50000$ & 125141 & 129963 & 131542 & 130965 & 131894 & 131885 & 132477 & 132530 & 132100 & 134850 & 133704 & 132608 \\
+\bottomrule
+\end{tabular}
+\end{sidewaystable}
+
 
 %\subsubsection{Training Window Size Optimization}
 %
